Attempt to fix missing secret

--- a/docker/stacks/karakeep/app.yaml
+++ b/docker/stacks/karakeep/app.yaml
@@ -15,6 +15,9 @@ services:
       # You almost never want to change the value of the DATA_DIR variable.
       # If you want to mount a custom directory, change the volume mapping above instead.
       DATA_DIR: /data # DON'T CHANGE THIS
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
+      NEXTAUTH_URL: ${NEXTAUTH_URL}
     labels:
       traefik.enable: "true"
       # Frontend => Router
