--- a/docker/stacks/karakeep/meilisearch.yaml
+++ b/docker/stacks/karakeep/meilisearch.yaml
@@ -5,6 +5,10 @@ services:
     restart: unless-stopped
     environment:
       MEILI_NO_ANALYTICS: "true"
+
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
+      NEXTAUTH_URL: ${NEXTAUTH_URL}
     networks:
       - karakeep
     volumes:
