--- a/komodo/stacks/vscodium.toml
+++ b/komodo/stacks/vscodium.toml
@@ -3,7 +3,7 @@ name = "vscodium"
 tags = ["dev"]
 [stack.config]
 server = "hyperion"
-links = ["https://dev.jekotia.net"]
+links = ["https://vscodium.jekotia.net"]
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
