--- a/docker/stacks/vscodium/compose.yaml
+++ b/docker/stacks/vscodium/compose.yaml
@@ -22,7 +22,7 @@ services:
       - NODECOR=true
     volumes:
       - /srv/application_data/vscodium/app/config:/config
-      # - vscodium.workspace.dockerfiles:/srv/Dockerfiles
+      - /srv/Dockerfiles:/srv/Dockerfiles
       - /srv/enceladus:/srv/enceladus
       - /srv/hyperion:/srv/hyperion
       - /srv/telesto:/srv/telesto
