Fix inconsistent filenames for Kavita components

--- a/docker/stacks/kavita/compose.yaml
+++ b/docker/stacks/kavita/compose.yaml
@@ -1,6 +1,6 @@
 include:
-  - kavita.app.yaml
-  - kavita.email.yaml
+  - app.yaml
+  - email.yaml
   - ../../networks/proxy_private.yaml
   - ../../volumes/smb-multimedia.yaml
 
