M\Add default value for NEXTAUTH_URL

--- a/docker/stacks/karakeep/meilisearch.yaml
+++ b/docker/stacks/karakeep/meilisearch.yaml
@@ -8,7 +8,7 @@ services:
 
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       MEILI_MASTER_KEY: ${MEILI_MASTER_KEY}
-      NEXTAUTH_URL: ${NEXTAUTH_URL}
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
     networks:
       - karakeep
     volumes:
