--- a/komodo/stacks/karakeep.toml
+++ b/komodo/stacks/karakeep.toml
@@ -23,5 +23,5 @@ OPENAI_API_KEY=[[KARAKEEP_OPENAI_API_KEY]]
 
 NEXTAUTH_SECRET=[[KARAKEEP_NEXTAUTH_SECRET]]
 MEILI_MASTER_KEY=[[KARAKEEP_MEILI_MASTER_KEY]]
-NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_URL=
 """
