--- a/komodo/stacks/bazarr.toml
+++ b/komodo/stacks/bazarr.toml
@@ -17,7 +17,11 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# BAZARR_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
+
+# PID=
+# GID=
 
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
