--- a/komodo/stacks/emulator-source-backups.toml
+++ b/komodo/stacks/emulator-source-backups.toml
@@ -14,5 +14,9 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+# ESB_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
+
+# UID=
+# GID=
 """
