--- a/komodo/stacks/foundry.toml
+++ b/komodo/stacks/foundry.toml
@@ -16,6 +16,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# FOUNDRY_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 FOUNDRY_PASSWORD=[[FOUNDRY_PASSWORD]]
