--- a/komodo/stacks/homepage.toml
+++ b/komodo/stacks/homepage.toml
@@ -22,7 +22,6 @@ MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
 MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
 MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
 
-#########-> DANGER ZONE <-#########
-UID=[[HYPERION_UID]]
-GID=[[HYPERION_GID]]
+# UID=
+# GID=
 """
