--- a/komodo/stacks/kasm-vscode.toml
+++ b/komodo/stacks/kasm-vscode.toml
@@ -16,6 +16,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# KASM_VSCODE_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 VNC_PASSWORD=[[KASM_VSCODE_VNC_PASSWORD]]
