--- a/komodo/stacks/kavita.toml
+++ b/komodo/stacks/kavita.toml
@@ -19,6 +19,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# KAVITA_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 KAVITA_MAIL_SMTP_HOST: [[KAVITA_MAIL_SMTP_HOST]]
