--- a/komodo/stacks/lidarr.toml
+++ b/komodo/stacks/lidarr.toml
@@ -17,6 +17,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# LIDARR_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
