--- a/komodo/stacks/mylar.toml
+++ b/komodo/stacks/mylar.toml
@@ -15,6 +15,7 @@ file_paths = [
   "../../volumes/smb-multimedia.yaml"
 ]
 environment = """
+# MYLAR_URL_PREFIX=
 TIMEZONE=[[TIMEZONE]]
 
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
