--- a/komodo/stacks/nextcloud.toml
+++ b/komodo/stacks/nextcloud.toml
@@ -20,21 +20,27 @@ file_paths = [
 ]
 environment = """
 NEXTCLOUD_URL_PREFIX=cloud.
+# CODE_OFFICE_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 # SMTP
+# SMTP_HOST=
+# SMTP_PORT=
 SMTP_NAME=[[NEXTCLOUD_SMTP_NAME]]
 SMTP_PASSWORD=[[NEXTCLOUD_SMTP_PASSWORD]]
 SMTP_FROM_ADDRESS=[[NEXTCLOUD_SMTP_FROM_ADDRESS]]
 SMTP_DOMAIN=[[NETWORK_DOMAIN]]
 
 # NEXTCLOUD
+# NEXTCLOUD_DATA_DIR=
 NEXTCLOUD_ADMIN_USER=[[NEXTCLOUD_ADMIN_USER]]
 NEXTCLOUD_ADMIN_PASS=[[NEXTCLOUD_ADMIN_PASS]]
 TRUSTED_PROXIES=[[NEXTCLOUD_TRUSTED_PROXIES]]
 REDIS_HOST_PASSWORD=[[NEXTCLOUD_REDIS_HOST_PASSWORD]]
 
 # DATABASE
+# MYSQL_DATABASE=
+# MYSQL_USER=
 MYSQL_PASSWORD=[[NEXTCLOUD_MYSQL_PASSWORD]]
 MYSQL_ROOT_PASSWORD=[[NEXTCLOUD_MYSQL_ROOT_PASSWORD]]
 
