--- a/komodo/stacks/paperless.toml
+++ b/komodo/stacks/paperless.toml
@@ -24,6 +24,8 @@ TIMEZONE=[[TIMEZONE]]
 PAPERLESS_URL_PREFIX=paperless.
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
+# POSTGRES_DB=
+# POSTGRES_USER=
 POSTGRES_PASSWORD=[[PAPERLESS_POSTGRES_PASSWORD]]
 
 PAPERLESS_SMB_HOST=[[PAPERLESS_SMB_HOST]]
