--- a/komodo/stacks/resilio-sync.toml
+++ b/komodo/stacks/resilio-sync.toml
@@ -16,6 +16,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
+# RESILIO_SYNC_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 SMB_ARCHIVE_HOST=[[RESILIO_SYNC_SMB_HOST]]
