--- a/komodo/stacks/romm.toml
+++ b/komodo/stacks/romm.toml
@@ -16,6 +16,7 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+# ROMM_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 IGDB_ID=[[IGDB_ID]]
@@ -26,6 +27,8 @@ ROMM_AUTH_SECRET_KEY=[[ROMM_AUTH_SECRET_KEY]]
 SCREENSCRAPER_USER=[[SCREENSCRAPER_USER]]
 SCREENSCRAPER_PASSWORD=[[SCREENSCRAPER_PASSWORD]]
 
+# ROMM_DB_NAME=
+# ROMM_DB_USER=
 ROMM_DB_PASS=[[ROMM_DB_PASS]]
 ROMM_DB_ROOT_PASS=[[ROMM_DB_ROOT_PASS]]
 """
