--- a/docker/stacks/bazarr/compose.yaml
+++ b/docker/stacks/bazarr/compose.yaml
@@ -13,8 +13,8 @@ services:
       - smb.multimedia:/multimedia
       - /srv/application_data/bazarr/app/config:/config
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${PID:-1000}
+      - PGID=${GID:-1000}
       - TZ=${TIMEZONE}
     labels:
       traefik.enable: "true"
