--- a/komodo/stacks/immich.toml
+++ b/komodo/stacks/immich.toml
@@ -14,6 +14,7 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+# IMMICH_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 # You can find documentation for all the supported env variables at https://immich.app/docs/install/environment-variables
