--- a/komodo/stacks/obsidian-livesync.toml
+++ b/komodo/stacks/obsidian-livesync.toml
@@ -14,6 +14,7 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+# OBSIDIAN_LIVESYNC_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 COUCHDB_USER=[[OBSIDIAN_LIVESYNC_COUCHDB_USER]]
