--- a/komodo/stacks/uptime-kuma.toml
+++ b/komodo/stacks/uptime-kuma.toml
@@ -14,5 +14,6 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+# UPTIME_KUMA_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 """
