--- a/bootstrap/hyperion/komodo.env.example
+++ b/bootstrap/hyperion/komodo.env.example
@@ -13,7 +13,7 @@ COMPOSE_LOGGING_DRIVER=local # Enable log rotation with the local driver.
 
 ## Set your time zone for schedules
 ## https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-TZ=America/Toronto
+TZ=
 
 #=-------------------------=#
 #= Komodo Core Environment =#
@@ -28,7 +28,7 @@ TZ=America/Toronto
 ## Used for Oauth / Webhook url suggestion / Caddy reverse proxy.
 KOMODO_HOST=https://${KOMODO_URL_PREFIX:-komodo.}${NETWORK_DOMAIN}
 ## Displayed in the browser tab.
-KOMODO_TITLE=Komodo @ Hyperion
+KOMODO_TITLE=
 ## Create a server matching this address as the "first server".
 ## Use `https://host.docker.internal:8120` when using systemd-managed Periphery.
 KOMODO_FIRST_SERVER=https://komodo.periphery:8120
