Fix branch name

--- a/komodo/stacks/core-enceladus.toml
+++ b/komodo/stacks/core-enceladus.toml
@@ -6,7 +6,7 @@ server = "enceladus"
 links = ["https://traefik.enceladus.jekotia.net"]
 git_account = "jekotia"
 repo = "jekotia/saturn"
-branch = "main"
+branch = "master"
 webhook_enabled = false
 run_directory = "docker/stacks/core-enceladus/"
 file_paths = [
