--- a/komodo/stacks/core-enceladus.toml
+++ b/komodo/stacks/core-enceladus.toml
@@ -18,7 +18,7 @@ file_paths = [
 environment = """
 TIMEZONE=[[TIMEZONE]]
 
-TRAEFIK_URL_PREFIX=traefik.enceladus.
+# TRAEFIK_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
 SECRETS_CLOUDFLARE_API_KEY=[[ENCELADUS_TRAEFIK_CLOUDFLARE_API_TOKEN]]
