Missed change in previous commit

--- a/komodo/stacks/core-enceladus.toml
+++ b/komodo/stacks/core-enceladus.toml
@@ -3,7 +3,7 @@ name = "core-enceladus"
 tags = ["enceladus"]
 [stack.config]
 server = "enceladus"
-links = ["https://traefik.enceladus.jekotia.net"]
+links = ["https://testy.jekotia.net"]
 git_account = "jekotia"
 repo = "jekotia/saturn"
 branch = "master"
