Add missing variables for SMB. Pin to specific image version.

--- a/komodo/stacks/qbittorrent.toml
+++ b/komodo/stacks/qbittorrent.toml
@@ -17,4 +17,11 @@ file_paths = [
 environment = """
 # QBITTORRENT_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
+
+MULTIMEDIA_HOST=[[MULTIMEDIA_HOST]]
+MULTIMEDIA_USER=[[MULTIMEDIA_USER]]
+MULTIMEDIA_PASS=[[MULTIMEDIA_PASS]]
+
+# UID=
+# GID=
 """
