--- a/docker/stacks/qbittorrent/compose.yaml
+++ b/docker/stacks/qbittorrent/compose.yaml
@@ -5,7 +5,7 @@ include:
 services:
   #-> https://hub.docker.com/r/linuxserver/qbittorrent
   qbittorrent:
-    image: linuxserver/qbittorrent:latest
+    image: linuxserver/qbittorrent:5.1.0@sha256:0a3ef7232ee85777303fc794c3ff96743235812d185b506fe089e873fa2f6bbf
     container_name: qbittorrent
     restart: unless-stopped
     networks:
