Better headers handling for qbittorrent

--- a/docker/stacks/qbittorrent/compose.yaml
+++ b/docker/stacks/qbittorrent/compose.yaml
@@ -30,3 +30,11 @@ services:
       # Frontend => Services
       traefik.http.routers.qbittorrent.service: qbittorrent
       traefik.http.services.qbittorrent.loadbalancer.server.port: 8080
+      # https://github.com/qbittorrent/qBittorrent/wiki/Traefik-Reverse-Proxy-for-Web-UI
+      # appropriate header changes
+      traefik.http.middlewares.qbittorrent-headers.headers.customrequestheaders.X-Frame-Options: SAMEORIGIN
+      traefik.http.middlewares.qbittorrent-headers.headers.customrequestheaders.Referer:
+      traefik.http.middlewares.qbittorrent-headers.headers.customrequestheaders.Origin:
+      traefik.http.routers.qbittorrent.middlewares: qbittorrent-headers
+      # loadbalancer to *not* pass the host header
+      traefik.http.services.qbittorrent.loadbalancer.passhostheader: false
