--- a/docker/stacks/navidrome/compose.yaml
+++ b/docker/stacks/navidrome/compose.yaml
@@ -11,6 +11,7 @@ services:
     networks:
     - proxy_private
     environment:
+    - "ND_DATAFOLDER=/data"
     - "ND_MUSICFOLDER=/music"
     - "ND_BASEURL=${NAVIDROME_URL_PREFIX:-navidrome.}${NETWORK_DOMAIN}"
     volumes:
