--- a/komodo/stacks/logforge.toml
+++ b/komodo/stacks/logforge.toml
@@ -17,12 +17,15 @@ environment = """
 # LOGFORGE_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
-# EXPOSED_BACKEND_PORT=
-# BACKEND_SERVICE_PORT=
+BACKEND_SERVICE_CONTAINER_NAME="logforge.backend"
+BACKEND_SERVICE_PORT="8000"
+EXPOSED_BACKEND_PORT="8000"
 
-# EXPOSED_FRONTEND_PORT=
-# FRONTEND_SERVICE_PORT=
+FRONTEND_SERVICE_CONTAINER_NAME="logforge.frontend"
+FRONTEND_SERVICE_PORT="3000"
+EXPOSED_FRONTEND_PORT="3000"
 
-# NOTIFIER_PLAIN_PORT=
-# NOTIFIER_WEB_PORT=
+NOTIFIER_SERVICE_CONTAINER="logforge.notifier"
+NOTIFIER_PLAIN_PORT="8083"
+NOTIFIER_WEB_PORT="8086"
 """
