--- a/docker/stacks/logforge/frontend.yaml
+++ b/docker/stacks/logforge/frontend.yaml
@@ -10,6 +10,7 @@ services:
     ports:
       - "${EXPOSED_FRONTEND_PORT:-3000}:${FRONTEND_SERVICE_PORT:-3000}"
     networks:
+      - proxy_private
       - logforge
     depends_on:
       - logforge.backend
