--- a/docker/stacks/stirlingpdf/compose.yaml
+++ b/docker/stacks/stirlingpdf/compose.yaml
@@ -4,7 +4,7 @@ include:
 services:
   #-> https://docs.stirlingpdf.com/Installation/Docker%20Install/
   stirlingpdf:
-    image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:0.46.2@sha256:396ca949b81198a65b9abfec38518fa44e871b1970dad9f9718ffd030eef9b92
+    image: ghcr.io/stirling-tools/stirling-pdf:0.46.2@sha256:396ca949b81198a65b9abfec38518fa44e871b1970dad9f9718ffd030eef9b92
     container_name: stirlingpdf
     restart: unless-stopped
     environment:
