--- a/docker/stacks/dozzle/app.yaml
+++ b/docker/stacks/dozzle/app.yaml
@@ -9,7 +9,7 @@ services:
       - internal
     environment:
       DOZZLE_LEVEL: trace
-      DOCKER_HOST: tcp://docker-socket-proxy:2375
+      DOCKER_HOST: tcp://dozzle.docker-socket-proxy:2375
 
     healthcheck:
       test: [ "CMD", "/dozzle", "healthcheck" ]
