Test official plex image due to connectivity issues

--- a/docker/stacks/plexms/compose.yaml
+++ b/docker/stacks/plexms/compose.yaml
@@ -4,7 +4,8 @@ include:
 services:
   #-> https://hub.docker.com/r/linuxserver/qbittorrent
   plexms:
-    image: lscr.io/linuxserver/plex:version-1.41.7.9823-59f304c16
+    image: plexinc/pms-docker
+    #lscr.io/linuxserver/plex:version-1.41.7.9823-59f304c16
     container_name: plexms
     restart: unless-stopped
     networks:
@@ -74,8 +75,8 @@ services:
     - /mnt/storage/multimedia:/multimedia
     - /mnt/storage/application_data/plexms/app/config:/config
     environment:
-    - PUID=${UID:-568}
-    - PGID=${GID:-1001}
+    - PLEX_UID=${UID:-568}
+    - PLEX_GID=${GID:-1001}
     - TZ=${TIMEZONE}
     - VERSION=version-1.41.7.9823-59f304c16
     #?- UMASK_SET=022
