Change tag to utilities

--- a/komodo/stacks/stirlingpdf.toml
+++ b/komodo/stacks/stirlingpdf.toml
@@ -1,6 +1,6 @@
 [[stack]]
 name = "stirlingpdf"
-tags = ["tools"]
+tags = ["utilities"]
 [stack.config]
 server = "hyperion"
 links = ["https://stirlingpdf.jekotia.net"]
